Fix how opening hours are displayed on smaller screens - now all list items are alligned to the left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -757,22 +757,16 @@ nav a:active, a:hover {
 @media only screen and (max-width: 320px) {
 
     #opening-hours ul li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 1rem;
-    }
-
-    #opening-hours ul li strong {
-        width: unset;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 1rem;
     }
 
     #opening-hours ul li span {
-        width: unset;
         padding-left: 0;
+        width: unset;
     }
 }
-
 
 
 /* Footer */
